--- a/wiki/WhyJoinPM.wiki
+++ b/wiki/WhyJoinPM.wiki
@@ -1,5 +1,5 @@
 #summary One-sentence summary of this page.
 
-= Why we need Copywriters? =
+= Project managers, mentors, and supervisors? =
 
-We need copywriters to market our idea. We need copywriters to communicate our idea. We need copywriters to crystallize the motivation behind our initiative for everybody. *We need copywriters to be succeed.*
+We need project managers, mentors, and supervisors to keep everything on track and *keep the initiative moving on forward*!
