--- a/wiki/WhyJoinCopy.wiki
+++ b/wiki/WhyJoinCopy.wiki
@@ -3,3 +3,6 @@
 = Why we need Copywriters? =
 
 We need copywriters to market our idea. We need copywriters to communicate our idea. We need copywriters to crystallize the motivation behind our initiative for everybody. *We need copywriters to be succeed.*
+
+==What is in it for you, the copywriter?==
+Showcase your talent.
