Edited wiki page WhyJoinCopy through web user interface.

--- a/wiki/WhyJoinCopy.wiki
+++ b/wiki/WhyJoinCopy.wiki
@@ -5,4 +5,4 @@
 We need copywriters to market our idea. We need copywriters to communicate our idea. We need copywriters to crystallize the motivation behind our initiative for everybody. *We need copywriters to be succeed.*
 
 ==What is in it for you, the copywriter?==
-Showcase your talent.
+Showcase your talent. Work for a good cause.
