Edited wiki page WhyJoinPM through web user interface.

--- a/wiki/WhyJoinPM.wiki
+++ b/wiki/WhyJoinPM.wiki
@@ -3,3 +3,8 @@
 = Project managers, mentors, and supervisors? =
 
 We need project managers, mentors, and supervisors to keep everything on track and *keep the initiative moving on forward*!
+
+
+== What is in it for you, if you join?==
+
+Showcase your talent. Gain experience. Work for a good cause. Save the environment. Help change the world and make it a littlebit better place. 
