Edited wiki page WhyJoinRental through web user interface.

--- a/wiki/WhyJoinRental.wiki
+++ b/wiki/WhyJoinRental.wiki
@@ -2,4 +2,4 @@
 
 = Why join if you Rent Cars? =
 
-Have excess cars in your fleet degrading in value having low use percentage? Share your fleet.
+Have excess cars in your fleet degrading in value having low use percentage? Share your fleet. It is the way of the future. Get a headstart.
