Edited wiki page WhyJoinManufacturer through web user interface.

--- a/wiki/WhyJoinManufacturer.wiki
+++ b/wiki/WhyJoinManufacturer.wiki
@@ -2,4 +2,4 @@
 
 = What is in it for me - the car manufacturer? =
 
-Why sell another car, ever? Simply put them out there for shared use, keep track with usage statistics and manufacture new ones just-in-time. Keep all the profits from your factory to the end user.
+Why sell another car, ever? Simply put them out there for shared use, keep track with usage statistics and manufacture new ones just-in-time. Keep all the profits from your factory to the end user. Get full usage data and improve your performance accordingly.
