--- a/wiki/WhyJoinPM.wiki
+++ b/wiki/WhyJoinPM.wiki
@@ -8,3 +8,7 @@ We need project managers, mentors, and supervisors to keep everything on track a
 == What is in it for you, if you join?==
 
 Showcase your talent. Gain experience. Work for a good cause. Save the environment. Help change the world and make it a littlebit better place. 
+
+== What to do? ==
+
+Your tasks will include recruiting partners, increasing visibility, networking, collaborating, gathering and organizing ideas, etc.
