--- a/wiki/WhyJoinPM.wiki
+++ b/wiki/WhyJoinPM.wiki
@@ -11,4 +11,4 @@ Showcase your talent. Gain experience. Work for a good cause. Save the environme
 
 == What to do? ==
 
-Your tasks will include recruiting partners and collaborators, increasing visibility, public relations, promotion, networking, collaborating, gathering and organizing ideas, etc.
+Your tasks will include recruiting partners and collaborators, increasing visibility, public relations, promotion, networking, collaborating, brainstorming, workshopping, gathering and organizing ideas, etc.
