Edited wiki page WhyJoinPM through web user interface.

--- a/wiki/WhyJoinPM.wiki
+++ b/wiki/WhyJoinPM.wiki
@@ -1,14 +1,14 @@
 #summary One-sentence summary of this page.
 
-= Project managers, mentors, and supervisors? =
+= Wanted: Project Managers, Mentors, and Supervisors =
 
 We need project managers, mentors, and supervisors to keep everything on track and *keep the initiative moving on forward*!
 
 
-== What is in it for you, if you join?==
+== Join us! ==
 
-Showcase your talent. Gain experience. Work for a good cause. Save the environment. Help change the world and make it a littlebit better place. 
+Showcase your talent and gain experience. Work for a good cause. Save the environment and make the world a better place. Enough said.
 
-== What to do? ==
+== Your tasks... ==
 
-Your tasks will include recruiting partners and collaborators, increasing visibility, public relations, promotion, networking, collaborating, brainstorming, workshopping, gathering and organizing ideas, etc. If you are the man/woman for the job, you know the drill.
+..will be various and interesting. The important thing is that you are passionate about your work. You will be, among other things, recruiting partners and collaborators, increasing visibility through public relations, promotion, networking and collaborating. You will be working closely with other team members brainstorming, workshopping, gathering and organizing ideas, etc. If you are the man/woman for the job, you know the drill. 
