Edited wiki page WhyJoinCopy through web user interface.

--- a/wiki/WhyJoinCopy.wiki
+++ b/wiki/WhyJoinCopy.wiki
@@ -1,8 +1,11 @@
 #summary One-sentence summary of this page.
 
-= Why we need Copywriters? =
+= We Need Copywriters! =
 
-We need copywriters to market our idea. We need copywriters to communicate our idea. We need copywriters to crystallize the motivation behind our initiative for everybody. *We need copywriters to be succeed.*
+We need copywriters to market our idea. We want good, efficient copy that will be informative, fresh and appealing. 
 
-==What is in it for you, the copywriter?==
-Showcase your talent. Work for a good cause. Save the environment. Help change the world and make it a littlebit better place.
+==Can You Write Efficient Webcopy?==
+
+If so, you should join us. In order to succeed in this task, you need to have fluent English, experience in webcopy and prefereably also in SEO friendly writing. 
+
+Choose to work for a good cause. Help the environment with every word you type.
