Edited wiki page WhyJoinCopy through web user interface.

--- a/wiki/WhyJoinCopy.wiki
+++ b/wiki/WhyJoinCopy.wiki
@@ -6,6 +6,6 @@ We need copywriters to market our idea. We want good, efficient copy that will b
 
 ==Can You Write Efficient Webcopy?==
 
-If so, you should join us. In order to succeed in this task, you need to have fluent English, experience in webcopy and prefereably also in SEO friendly writing. 
+If so, you should join us. In order to succeed in this task, you need to have fluent English, experience in webcopy and preferably also in SEO friendly writing. 
 
 Choose to work for a good cause. Help the environment with every word you type.
