Edited wiki page WhyJoinManufacturer through web user interface.

--- a/wiki/WhyJoinManufacturer.wiki
+++ b/wiki/WhyJoinManufacturer.wiki
@@ -2,4 +2,7 @@
 
 = What is in it for me - the car manufacturer? =
 
-Why sell another car, ever? Simply put them out there for shared use, keep track with usage statistics and manufacture new ones [http://en.wikipedia.org/wiki/Just_In_Time_%28business%29 just-in-time]. Keep all the profits from your factory to the end user. Get full usage data and improve your performance accordingly.
+Huh? We want you to sell less cars? Yes!
+ 
+This is the new, sustainable way to make business by selling cars. You will get full usage data and improve your cars' performance accordingly. 
+Simply put your cars out there for shared use, you and the end user will benefit! 
