Edited wiki page WhyJoinLegal through web user interface.

--- a/wiki/WhyJoinLegal.wiki
+++ b/wiki/WhyJoinLegal.wiki
@@ -1,6 +1,6 @@
-= Why we need Legal advisors? =
+= We Need You to Become Our Legal Advisor! =
 
-Legal issues are often a hassle. Can you help? Are you a specialist in collaboration networks of the future or willing to become one?
+Can you help us navigate through the legal jungle? Are you a specialist in collaboration networks of the future or willing to become one? 
 
-==What is in it for you, if you join?==
-Become a better person? Lawyers can't be all that bad, can they? Showcase your talent. Gain experience. Work for a good cause. Save the environment. Help change the world and make it a littlebit better place. 
+==What is in it for you?==
+Become a better person! Lawyers can't be all that bad, can they? Showcase your talent. Gain experience and work for a good cause.
