--- a/wiki/WhyJoinRental.wiki
+++ b/wiki/WhyJoinRental.wiki
@@ -1,5 +1,6 @@
 #summary One-sentence summary of this page.
 
-= Why join if you Rent Cars? =
+= Rent Cars? Joining Us is a Very Smart Move! =
 
-Have excess cars in your fleet degrading in value having low use percentage? Share your fleet. It is the way of the future. Get a headstart.
+So you have excess cars in your fleet degrading in value and having low use percentage? 
+Get a headstart on future car rental business. Share your cars with us.
