Edited wiki page WhyJoinManufacturer through web user interface.

--- a/wiki/WhyJoinManufacturer.wiki
+++ b/wiki/WhyJoinManufacturer.wiki
@@ -4,5 +4,5 @@
 
 Huh? We want you to sell less cars? Yes!
  
-This is the new, sustainable way to make business by selling cars. You will get full usage data and improve your cars' performance accordingly. 
+This is the new, sustainable way to make business by building cars. You will get full usage data and improve your cars' performance accordingly. 
 Simply put your cars out there for shared use, you and the end user will benefit! 
