Edited wiki page WhyJoinArt through web user interface.

--- a/wiki/WhyJoinArt.wiki
+++ b/wiki/WhyJoinArt.wiki
@@ -1,4 +1,4 @@
 #summary One-sentence summary of this page.
 
 = Your work could be here! =
-We promote environmental friendly car sharing. Our goal is to share cars, costs and carbon footprints. Joim us and show how your work can capture our message!
+We promote environmental friendly car sharing. Our goal is to share cars, costs and carbon footprints. Join us and show how your work can capture our message!
