--- a/wiki/MilestoneTools.wiki
+++ b/wiki/MilestoneTools.wiki
@@ -2,6 +2,6 @@
 
   * Source code repository at [http://code.google.com/p/koodaripalvelut-open-source-car-sharing/source/checkout Google Code] using svn
   * Project wiki web site at [http://code.google.com/p/koodaripalvelut-open-source-car-sharing/ Google Code]
-  * Domain Driven Design / Domain Driven Architecture; preferably some tool that generates models as .java files
+  * Domain Driven Design / Domain Driven Architecture; preferably some tool that generates and maintains models as .java files
   * Java programming language (we start with JDK6 and upgrade as newer jave versions mature)
   * Eclipse IDE or similar; project templates and code checkstyles will be dished out for Eclipse only.
