--- a/wiki/CarTrackingDevice.wiki
+++ b/wiki/CarTrackingDevice.wiki
@@ -27,3 +27,5 @@ Nice-to-have Car Status Information will consist of following data:
   # Vehicle direction, possible destination address?
 
 [http://en.wikipedia.org/wiki/On-board_diagnostics On-board diagnostics] can be used to integrate with the car.
+
+[http://en.wikipedia.org/wiki/CAN_bus CAN vehicle bus] standard can be used to communicate with the vehicle
