Edited wiki page CarTrackingDevice through web user interface.

--- a/wiki/CarTrackingDevice.wiki
+++ b/wiki/CarTrackingDevice.wiki
@@ -32,3 +32,6 @@ Nice-to-have Car Status Information will consist of following data:
 
 Example devices
   * http://www.mobile-devices.com/our-products/c4-obd2-dongle/
+
+See video:
+`<iframe width="560" height="315" src="http://www.youtube.com/embed/DZStbfenfAI" frameborder="0" allowfullscreen></iframe>`
